--- a/index.html
+++ b/index.html
@@ -1,72 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Secure Employee Portal</title>
+  <title>Secure Login</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f0f2f5;
+      background: #0f172a;
+      color: #fff;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
+      justify-content: center;
       height: 100vh;
     }
     .login-box {
-      background: white;
-      padding: 40px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      width: 300px;
+      background: #1e293b;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.3);
     }
-    .login-box h2 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    .login-box input {
-      width: 100%;
+    input {
       padding: 10px;
       margin: 10px 0;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-    }
-    .login-box button {
       width: 100%;
-      padding: 10px;
-      background: #007BFF;
-      color: white;
+      border-radius: 8px;
       border: none;
-      border-radius: 6px;
-      cursor: pointer;
+      background: #334155;
+      color: white;
     }
-    .login-box .note {
-      font-size: 12px;
-      color: gray;
+    button {
+      background-color: #38bdf8;
+      border: none;
+      padding: 10px 15px;
+      border-radius: 8px;
+      cursor: pointer;
+      color: #000;
+      font-weight: bold;
       margin-top: 10px;
+    }
+    button:hover {
+      background-color: #0ea5e9;
     }
   </style>
 </head>
 <body>
   <div class="login-box">
-    <h2>Employee Login</h2>
-    <form onsubmit="handleLogin(event)">
-      <input type="text" id="username" placeholder="Email or Username" required>
-      <input type="password" id="password" placeholder="Password" required>
+    <h2>Login</h2>
+    <form id="loginForm">
+      <input type="text" id="username" placeholder="Username" required><br>
+      <input type="password" id="password" placeholder="Password" required><br>
       <button type="submit">Login</button>
     </form>
-    <p class="note">For internal use only</p>
+    <p id="message"></p>
   </div>
 
   <script>
-    function handleLogin(e) {
-      e.preventDefault();
-      const user = document.getElementById('username').value;
-      const pass = document.getElementById('password').value;
-      alert("This was a simulation.\nYour input has been recorded for awareness training.");
+    document.getElementById("loginForm").addEventListener("submit", function(event) {
+      event.preventDefault(); // Prevent actual form submission
 
-      console.log("Captured Username:", user);
-      console.log("Captured Password:", pass);
-    }
+      const username = document.getElementById("username").value;
+      const password = document.getElementById("password").value;
+
+      // Fake logging (console only)
+      console.log("🚨 [Phishing Simulation] Captured Credentials:");
+      console.log("Username:", username);
+      console.log("Password:", password);
+
+      document.getElementById("message").textContent = "Login failed: suspicious activity detected.";
+      document.getElementById("message").style.color = "#f87171";
+    });
   </script>
 </body>
 </html>
+
