--- a/quiz.html
+++ b/quiz.html
@@ -1,81 +1,84 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Cyber Awareness Quiz</title>
+  <title>Phishing Awareness Quiz</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       background: #0f172a;
       color: #fff;
-      padding: 20px;
-      max-width: 600px;
-      margin: auto;
+      padding: 30px;
     }
     .question {
       margin-bottom: 20px;
     }
-    .question h3 {
-      margin-bottom: 10px;
-    }
     button {
-      background: #38bdf8;
-      color: #000;
       padding: 10px 20px;
+      background: #38bdf8;
       border: none;
       border-radius: 8px;
       cursor: pointer;
-    }
-    button:hover {
-      background: #0ea5e9;
+      font-weight: bold;
     }
     #result {
-      font-size: 18px;
       margin-top: 20px;
-      font-weight: bold;
+      font-size: 20px;
       color: #facc15;
     }
   </style>
 </head>
 <body>
 
-  <h1>Cyber Awareness Quiz</h1>
+  <h1>Phishing Awareness Quiz</h1>
 
   <form id="quizForm">
+
     <div class="question">
-      <h3>1. What is phishing?</h3>
+      <p>1. What is phishing?</p>
       <label><input type="radio" name="q1" value="a"> A type of malware</label><br>
       <label><input type="radio" name="q1" value="b"> A hacking method using physical devices</label><br>
       <label><input type="radio" name="q1" value="c"> A trick to steal personal data through fake emails</label>
     </div>
 
     <div class="question">
-      <h3>2. Which of these is a sign of a phishing email?</h3>
+      <p>2. Which of these is a sign of a phishing email?</p>
       <label><input type="radio" name="q2" value="a"> Professional grammar</label><br>
       <label><input type="radio" name="q2" value="b"> Urgent language asking to click a suspicious link</label><br>
       <label><input type="radio" name="q2" value="c"> Email from your manager</label>
     </div>
 
     <div class="question">
-      <h3>3. How can you protect yourself from phishing?</h3>
+      <p>3. How can you protect yourself from phishing?</p>
       <label><input type="radio" name="q3" value="a"> Never update your browser</label><br>
       <label><input type="radio" name="q3" value="b"> Always click links in unknown emails</label><br>
       <label><input type="radio" name="q3" value="c"> Be cautious of unexpected messages & verify URLs</label>
     </div>
 
-    <button type="submit">Submit Quiz</button>
-  </form>
+    <button type="submit">Submit</button>
+    <div id="result"></div>
 
-  <div id="result"></div>
+  </form>
 
   <script>
     document.getElementById("quizForm").addEventListener("submit", function(event) {
       event.preventDefault();
-      let score = 0;
-      if (document.querySelector('input[name="q1"]:checked')?.value === "c") score++;
-      if (document.querySelector('input[name="q2"]:checked')?.value === "b") score++;
-      if (document.querySelector('input[name="q3"]:checked')?.value === "c") score++;
 
-      document.getElementById("result").innerText = `✅ You scored ${score} out of 3.\nStay safe from phishing!`;
+      let score = 0;
+
+      const answers = {
+        q1: "c",
+        q2: "b",
+        q3: "c"
+      };
+
+      for (let q in answers) {
+        const selected = document.querySelector(`input[name="${q}"]:checked`);
+        if (selected && selected.value === answers[q]) {
+          score++;
+        }
+      }
+
+      document.getElementById("result").textContent = `🎉 You got ${score} out of 3 correct!`;
     });
   </script>
 
