--- a/quiz(2).html
+++ b/quiz(2).html
@@ -65,5 +65,20 @@
       document.getElementById("result").innerText = `You scored ${score} out of 3`;
     });
   </script>
+  
+  <script>
+  document.getElementById("quizForm").addEventListener("submit", function(event) {
+    event.preventDefault();
+    const answers = { q1: "c", q2: "b", q3: "c" };
+    let score = 0;
+    for (let q in answers) {
+      const selected = document.querySelector(`input[name="${q}"]:checked`);
+      if (selected && selected.value === answers[q]) {
+        score++;
+      }
+    }
+    document.getElementById("result").innerText = `You scored ${score} out of 3`;
+  });
+</script>
 </body>
 </html>
